Uninstalled live server

--- a/output.css
+++ b/output.css
@@ -508,3 +508,10 @@ video {
   --tw-contain-paint:  ;
   --tw-contain-style:  ;
 }
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+.font-semibold{
+  font-weight: 600;
+}
