Made edits to main column

--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -1,7 +1,38 @@
 body {
-    letter-spacing: -0.03125rem;
     min-height: 100%;
     margin: 0;
     color: #181717;
     background-color: #ffffff;
+}
+
+.text-sm {
+    letter-spacing: -0.0284375rem;
+}
+
+.text-base {
+    letter-spacing: -0.0325rem;
+}
+
+.text-lg {
+    letter-spacing: -0.0365625rem;
+}
+
+.text-xl {
+    letter-spacing: -0.040625rem;
+}
+
+.text-2xl {
+    letter-spacing: -0.04875rem;
+}
+
+.text-3xl {
+    letter-spacing: -0.0609375rem;
+}
+
+.text-4xl {
+    letter-spacing: -0.073125rem;
+}
+
+.text-5xl {
+    line-height: 1.2;
 }
