--- a/src/css/output.css
+++ b/src/css/output.css
@@ -551,6 +551,9 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
+.ml-60{
+  margin-left: 15rem;
+}
 .flex{
   display: flex;
 }
@@ -562,6 +565,9 @@ video {
 }
 .w-19\/20{
   width: 95%;
+}
+.flex-1{
+  flex: 1 1 0%;
 }
 .flex-col{
   flex-direction: column;
@@ -584,9 +590,26 @@ video {
 .gap-4{
   gap: 1rem;
 }
+.gap-8{
+  gap: 2rem;
+}
 .py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+.pb-24{
+  padding-bottom: 6rem;
+}
+.pt-8{
+  padding-top: 2rem;
+}
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 .text-xl{
   font-size: 1.25rem;
@@ -594,4 +617,7 @@ video {
 }
 .font-semibold{
   font-weight: 600;
+}
+.text-bk-32{
+  color: #18171732;
 }
