--- a/src/css/output.css
+++ b/src/css/output.css
@@ -541,6 +541,23 @@ video {
     max-width: 1536px;
   }
 }
+.aspect-h-9{
+  --tw-aspect-h: 9;
+}
+.aspect-w-16{
+  position: relative;
+  padding-bottom: calc(var(--tw-aspect-h) / var(--tw-aspect-w) * 100%);
+  --tw-aspect-w: 16;
+}
+.aspect-w-16 > *{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 .fixed{
   position: fixed;
 }
@@ -569,6 +586,9 @@ video {
 }
 .ml-60{
   margin-left: 15rem;
+}
+.block{
+  display: block;
 }
 .flex{
   display: flex;
@@ -678,11 +698,11 @@ video {
 .pb-24{
   padding-bottom: 6rem;
 }
+.pt-24{
+  padding-top: 6rem;
+}
 .pt-4{
   padding-top: 1rem;
-}
-.pt-6{
-  padding-top: 1.5rem;
 }
 .pt-8{
   padding-top: 2rem;
