--- a/src/css/output.css
+++ b/src/css/output.css
@@ -541,23 +541,6 @@ video {
     max-width: 1536px;
   }
 }
-.aspect-h-9{
-  --tw-aspect-h: 9;
-}
-.aspect-w-16{
-  position: relative;
-  padding-bottom: calc(var(--tw-aspect-h) / var(--tw-aspect-w) * 100%);
-  --tw-aspect-w: 16;
-}
-.aspect-w-16 > *{
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
 .fixed{
   position: fixed;
 }
@@ -660,6 +643,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(24 23 23 / var(--tw-border-opacity));
 }
+.border-gy{
+  --tw-border-opacity: 1;
+  border-color: rgb(244 247 247 / var(--tw-border-opacity));
+}
 .bg-gy{
   --tw-bg-opacity: 1;
   background-color: rgb(244 247 247 / var(--tw-bg-opacity));
@@ -743,9 +730,4 @@ video {
 }
 .text-bk-48{
   color: #18171748;
-}
-.shadow{
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
