--- a/src/css/output.css
+++ b/src/css/output.css
@@ -579,6 +579,11 @@ p{
   line-height: 1.5rem;
         letter-spacing: -0.0325rem;
 }
+a{
+  font-size: 1rem;
+  line-height: 1.5rem;
+        letter-spacing: -0.0325rem;
+}
 .fixed{
   position: fixed;
 }
