--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -54,6 +54,8 @@ a:hover {
 }
 
 .dropdown {
+    transition: opacity 0.3s ease-in-out;
+    opacity: 0;
     position: absolute;
     display: none;
     background-color: white;
