--- a/src/css/output.css
+++ b/src/css/output.css
@@ -550,39 +550,39 @@ h2{
   font-size: 2.25rem;
   line-height: 2.5rem;
   font-weight: 600;
-        letter-spacing: -0.073125rem;
+        letter-spacing: calc(-0.0325rem * 2.25);
 }
 h3{
   font-size: 1.875rem;
   line-height: 2.25rem;
   font-weight: 600;
-        letter-spacing: -0.0609375rem;
+        letter-spacing: calc(-0.0325rem * 1.875);
 }
 h4{
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 600;
-        letter-spacing: -0.04875rem;
+        letter-spacing: calc(-0.0325rem * 1.5);
 }
 h5{
   font-size: 1.25rem;
   line-height: 1.75rem;
-        letter-spacing: -0.040625rem;
+        letter-spacing: calc(-0.0325rem * 1.25);
 }
 h6{
   font-size: 1.125rem;
   line-height: 1.75rem;
-        letter-spacing: -0.0365625rem;
+        letter-spacing: calc(-0.0325rem * 1.125);
 }
 p{
   font-size: 1rem;
   line-height: 1.5rem;
-        letter-spacing: -0.0325rem;
+        letter-spacing: calc(-0.0325rem * 1);
 }
 a{
   font-size: 1rem;
   line-height: 1.5rem;
-        letter-spacing: -0.0325rem;
+        letter-spacing: calc(-0.0325rem * 1);
 }
 strong{
   color: #18171732;
@@ -787,6 +787,9 @@ strong{
 }
 .pb-24{
   padding-bottom: 6rem;
+}
+.pt-16{
+  padding-top: 4rem;
 }
 .pt-4{
   padding-top: 1rem;
