Changed line-height to 1.3 instead of tailwind 1.2

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -550,39 +550,46 @@ h2{
   font-size: 2.25rem;
   line-height: 2.5rem;
   font-weight: 600;
-        letter-spacing: calc(-0.0325rem * 2.25);
+        letter-spacing: calc(2.25 * -0.0325rem);
+        line-height: calc(2.25 * 1.3rem);
 }
 h3{
   font-size: 1.875rem;
   line-height: 2.25rem;
   font-weight: 500;
-        letter-spacing: calc(-0.0325rem * 1.875);
+        letter-spacing: calc(1.875 * -0.0325rem);
+        line-height: calc(1.875 * 1.3rem);
 }
 h4{
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 500;
-        letter-spacing: calc(-0.0325rem * 1.5);
+        letter-spacing: calc(1.5 * -0.0325rem);
+        line-height: calc(1.5 * 1.3rem);
 }
 h5{
   font-size: 1.25rem;
   line-height: 1.75rem;
-        letter-spacing: calc(-0.0325rem * 1.25);
+        letter-spacing: calc(1.25 * -0.0325rem);
+        line-height: calc(1.25 * 1.3rem);
 }
 h6{
   font-size: 1.125rem;
   line-height: 1.75rem;
-        letter-spacing: calc(-0.0325rem * 1.125);
+        letter-spacing: calc(1.125 * -0.0325rem);
+        line-height: calc(1.125 * 1.3rem);
 }
 p{
   font-size: 1rem;
   line-height: 1.5rem;
-        letter-spacing: calc(-0.0325rem * 1);
+        letter-spacing: calc(1 * -0.0325rem);
+        line-height: calc(1 * 1.3rem);
 }
 a{
   font-size: 1rem;
   line-height: 1.5rem;
-        letter-spacing: calc(-0.0325rem * 1);
+        letter-spacing: calc(1 * -0.0325rem);
+        line-height: calc(1 * 1.3rem);
 }
 strong{
   color: #18171732;
